fix: added request analysis model. added reasoning for all existing models
